[package]
name = "apitest"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2", features = ["postgres", "r2d2"] }
schemars = "0.8.22"
okapi = { version = "0.7.0" }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = { version = "1.0.218", features = ["derive"] }
dotenvy = "0.15.7"
once_cell = "1.20.3"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]